--- a/cpp.html
+++ b/cpp.html
@@ -102,7 +102,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     <h4>
-                        C++ object
+                        Object in C++
                     </h4>
                 </button>
             </h2>
@@ -194,7 +194,7 @@
                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo-p1" aria-expanded="true" aria-controls="collapseTwo-p1">
                     <h4>
-                        C++ Pointer
+                       Pointer in C++
                     </h4>
                 </button>
             </h2>
@@ -293,7 +293,7 @@
                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo-p2" aria-expanded="true" aria-controls="collapseTwo-p2">
                     <h4>
-                        C++ Arrrays
+                        Array in C++
                     </h4>
                 </button>
             </h2>
